--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
   <body>
     <div class="container">
-      <form id="form" class="app">
+      <div class="headingContainer">
         <h2>Text to Speach</h2>
+        <button id="recordBtn" class="recordBtn btn">Record</button>
+        <button id="listenBtn" class="recordBtn hide btn">Listning</button>
+      </div>
+      <form id="form" class="app">
         <textarea id="textInput" placeholder="Write your text"></textarea>
         <div>
           <p>Pitch : <span id="pitchContent">1</span></p>
