--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <div class="headingContainer">
-        <h2>Text to Speach</h2>
+        <h2>Text to Speech</h2>
         <button id="recordBtn" class="recordBtn btn">Record</button>
         <button id="listenBtn" class="recordBtn hide btn">Listning</button>
       </div>
